--- a/gb/19/6/20/n11336464.md
+++ b/gb/19/6/20/n11336464.md
@@ -1,78 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/dfh2/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/dfh2/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/dfh2/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ò»µ¶¿ì°þ´óËâÃØóÅ·è´« ÍøÌ¾ÒÔÇ°ÀË·ÑÈËÉú</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/06/garlic-peeling-hack-600x400.jpg" />
-<h6>¼ÓÄÃ´óÅ®ÍøÓÑ·ÖÏíÁËÒ»ÖÖ³¬¼òµ¥°þËâ·¨£¬Ö»ÓÃÒ»°Ñµ¶ÇáÇá²åÈëËâ°ê¡¢¼ÓÉÏ¡°Å¤¾¢¡±£¬Ò»¿Å¿ÅÁÁ½àµÄËâ°ê¾ÍÇáËÉ´ÓËâÆ¤ÖÐÍÑ¿Ç¶ø³ö¡££¨Twitter: Valentina PestileneÊÚÈ¨ÊÓÆµ½ØÍ¼£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/dsc2569/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/dsc2569/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/dsc2569/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸€åˆ€å¿«å‰¥å¤§è’œç§˜ç¬ˆç–¯ä¼  ç½‘å¹ä»¥å‰æµªè´¹äººç”Ÿ</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/garlic-peeling-hack-600x400.jpg" />
+<h6>åŠ æ‹¿å¤§å¥³ç½‘å‹åˆ†äº«äº†ä¸€ç§è¶…ç®€å•å‰¥è’œæ³•ï¼Œåªç”¨ä¸€æŠŠåˆ€è½»è½»æ’å…¥è’œç“£ã€åŠ ä¸Šâ€œæ‰­åŠ²â€ï¼Œä¸€é¢—é¢—äº®æ´çš„è’œç“£å°±è½»æ¾ä»Žè’œçš®ä¸­è„±å£³è€Œå‡ºã€‚ï¼ˆTwitter: Valentina PestileneæŽˆæƒè§†é¢‘æˆªå›¾ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê06ÔÂ21ÈÕÑ¶¡¿<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%A4%A7%E8%92%9C.md">´óËâ</a>¿°³ÆÊ³²ÄÖÐµÄ¾ÞÐÇ£¬ÊÀ½ç¸÷µØµÄÃÀÊ³¶¼Ï²»¶ÓÃ´óËâµ÷Î¶¡£ÏëÏñº«¹úÅÝ²Ë¡¢ÒâÃæ½´ÉÙÁË´óËâ»áÔõÑù£»ÖÐ¹ú²ËÄØ£¬ÎÞÂÛÁ¹°è¡¢ëçÖÆ¡¢Åë³´ìÀÖó£¬»¹ÊÇÖ±½Ó×ô²Í£¬´óËâ¸üÊÇÉÙ²»ÁË¡£</p>
-<p>¾¡¹ÜÉúËâµÄÆøÎ¶ºÜ´Ì¼¤£¬µ«È·Êµ¿ÉÈÃ²ËëÈ·çÎ¶Å¨Óô£»ÑÐ¾¿Ò²Ö¤Êµ£¬³ÔËâÓÐ·½·½ÃæÃæµÄ½¡¿µñÔÒæ¡££¨ÍÆ¼öÔÄ¶Á?<span style="color: #008000;"><a style="color: #008000;" href="https://github.com/dfh2/djy/blob/master/gb/16/2/28/n4650155.md" target="_blank" rel="noopener noreferrer">¾Å¸ö·½·¨×ÔÈ»ÌáÉýÈËÌåÃâÒßÁ¦</a></span>£©</p>
-<p>ËäÈ»³ÔËâºóµÄ¿ÚÆø»òÌåÎ¶ÈÃºÜ¶àÈËÍË±ÜÈýÉá£¬µ«<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%A4%A7%E8%92%9C.md">´óËâ</a>»¹ÊÇ»á³öÏÖÔÚ¶àÊý¼ÒÍ¥µÄ·¹×ÀÉÏ¡£</p>
-<p>Ö»ÊÇÓÐÒ»¸öÎÊÌâ´ó¼Ò»Ø±Ü²»ÁË£º<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%89%A5%E8%92%9C.md">°þËâ</a>ÊÇ¼þ¿¼ÑéÄÍÐÄµÄ¼ÒÎñÊÂ£¬ÌØ±ðÊÇÄÇÐ©ÐÂÏÊ½ôÊµµÄ´óËâ£¬Ò»¿Å¿Å°þÆðÀ´²»µ«·ÑÊ±£¬»¹ÅªµÃÂúÊÖËâÎ¶¡£</p>
-<p>¶Ô³£³£×ö·¹µÄÖÐ¹úÈËÀ´Ëµ£¬ÆÕ±éµÄ¾­ÑéÊÇÖ±½Ó°ÑÕû¿Å´óËâ·ÅÔÚ°¸°åÉÏÅÄËÉ£¬Ö»ÊÇËâ°ê»á¡°ÆÆÏà¡±£»»¹ÓÐÍøÓÑ·ÖÏíÓÃÎ¢²¨Â¯ÈÃ´óËâ1ÃëÖÓÍÑÆ¤µÄÇÏÃÅ¡££¨²ÎÔÄ?<span style="color: #008000;"><a style="color: #008000;" href="https://github.com/dfh2/djy/blob/master/gb/18/11/20/n10862774.md" target="_blank" rel="noopener noreferrer">1Ãë°þµô´óËâÆ¤£¿Î¢²¨Â¯µÄÆß´óÃîÓÃ</a></span>£©</p>
-<p>¶ø½ñ£¬Ò»Î»¼ÓÄÃ´óÅ®ÍøÓÑ·ÖÏíÁËÒ»ÖÖÈÃËâ°ê²»×ßÐÎµÄ³¬¼òµ¥<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E5%89%A5%E8%92%9C.md">°þËâ</a>·¨£¬Ö»ÓÃÒ»°Ñµ¶ÇáÇá²åÈëËâ°ê¡¢¼ÓÉÏ¡°Å¤¾¢¡±£¬ÁÁ½àµÄËâ°ê¾Í´ÓËâÆ¤ÖÐÍÑ¿Ç¶ø³ö¡£</p>
-<p>¡°¶Ô×Ü×öº«¹ú²ËµÄÈË£¬ÕâÕæÊÇ°þËâµÄ×î¼Ñ·½·¨£¡¡±ÕâÎ»Ãû½ÐÍßÂ×µÙÄÈ£¨<span style="color: #008000;"><a style="color: #008000;" href="https://twitter.com/VPestilenZ/status/1140437217619390465" target="_blank" rel="noopener noreferrer">Valentina Pestilene</a></span>£©µÄÍÆÌØÓÃ»§ÔÚÊÓÆµÖÐ¸½ÑÔ¡£</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´06æœˆ21æ—¥è®¯ã€‘<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E5%A4%A7%E8%92%9C.md#1">å¤§è’œ</a>å ªç§°é£Ÿæä¸­çš„å·¨æ˜Ÿï¼Œä¸–ç•Œå„åœ°çš„ç¾Žé£Ÿéƒ½å–œæ¬¢ç”¨å¤§è’œè°ƒå‘³ã€‚æƒ³åƒéŸ©å›½æ³¡èœã€æ„é¢é…±å°‘äº†å¤§è’œä¼šæ€Žæ ·ï¼›ä¸­å›½èœå‘¢ï¼Œæ— è®ºå‡‰æ‹Œã€è…Œåˆ¶ã€çƒ¹ç‚’ç‚–ç…®ï¼Œè¿˜æ˜¯ç›´æŽ¥ä½é¤ï¼Œå¤§è’œæ›´æ˜¯å°‘ä¸äº†ã€‚</p>
+<p>å°½ç®¡ç”Ÿè’œçš„æ°”å‘³å¾ˆåˆºæ¿€ï¼Œä½†ç¡®å®žå¯è®©èœè‚´é£Žå‘³æµ“éƒï¼›ç ”ç©¶ä¹Ÿè¯å®žï¼Œåƒè’œæœ‰æ–¹æ–¹é¢é¢çš„å¥åº·è£¨ç›Šã€‚ï¼ˆæŽ¨èé˜…è¯»?<span style="color: #008000;"><a style="color: #008000;" href="https://github.com/dsc2569/djy/blob/master/gb/16/2/28/n4650155.md#1" target="_blank" rel="noopener noreferrer">ä¹ä¸ªæ–¹æ³•è‡ªç„¶æå‡äººä½“å…ç–«åŠ›</a></span>ï¼‰</p>
+<p>è™½ç„¶åƒè’œåŽçš„å£æ°”æˆ–ä½“å‘³è®©å¾ˆå¤šäººé€€é¿ä¸‰èˆï¼Œä½†<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E5%A4%A7%E8%92%9C.md#1">å¤§è’œ</a>è¿˜æ˜¯ä¼šå‡ºçŽ°åœ¨å¤šæ•°å®¶åº­çš„é¥­æ¡Œä¸Šã€‚</p>
+<p>åªæ˜¯æœ‰ä¸€ä¸ªé—®é¢˜å¤§å®¶å›žé¿ä¸äº†ï¼š<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E5%89%A5%E8%92%9C.md#1">å‰¥è’œ</a>æ˜¯ä»¶è€ƒéªŒè€å¿ƒçš„å®¶åŠ¡äº‹ï¼Œç‰¹åˆ«æ˜¯é‚£äº›æ–°é²œç´§å®žçš„å¤§è’œï¼Œä¸€é¢—é¢—å‰¥èµ·æ¥ä¸ä½†è´¹æ—¶ï¼Œè¿˜å¼„å¾—æ»¡æ‰‹è’œå‘³ã€‚</p>
+<p>å¯¹å¸¸å¸¸åšé¥­çš„ä¸­å›½äººæ¥è¯´ï¼Œæ™®éçš„ç»éªŒæ˜¯ç›´æŽ¥æŠŠæ•´é¢—å¤§è’œæ”¾åœ¨æ¡ˆæ¿ä¸Šæ‹æ¾ï¼Œåªæ˜¯è’œç“£ä¼šâ€œç ´ç›¸â€ï¼›è¿˜æœ‰ç½‘å‹åˆ†äº«ç”¨å¾®æ³¢ç‚‰è®©å¤§è’œ1ç§’é’Ÿè„±çš®çš„çªé—¨ã€‚ï¼ˆå‚é˜…?<span style="color: #008000;"><a style="color: #008000;" href="https://github.com/dsc2569/djy/blob/master/gb/18/11/20/n10862774.md#1" target="_blank" rel="noopener noreferrer">1ç§’å‰¥æŽ‰å¤§è’œçš®ï¼Ÿå¾®æ³¢ç‚‰çš„ä¸ƒå¤§å¦™ç”¨</a></span>ï¼‰</p>
+<p>è€Œä»Šï¼Œä¸€ä½åŠ æ‹¿å¤§å¥³ç½‘å‹åˆ†äº«äº†ä¸€ç§è®©è’œç“£ä¸èµ°å½¢çš„è¶…ç®€å•<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E5%89%A5%E8%92%9C.md#1">å‰¥è’œ</a>æ³•ï¼Œåªç”¨ä¸€æŠŠåˆ€è½»è½»æ’å…¥è’œç“£ã€åŠ ä¸Šâ€œæ‰­åŠ²â€ï¼Œäº®æ´çš„è’œç“£å°±ä»Žè’œçš®ä¸­è„±å£³è€Œå‡ºã€‚</p>
+<p>â€œå¯¹æ€»åšéŸ©å›½èœçš„äººï¼Œè¿™çœŸæ˜¯å‰¥è’œçš„æœ€ä½³æ–¹æ³•ï¼â€è¿™ä½åå«ç“¦ä¼¦è’‚å¨œï¼ˆ<span style="color: #008000;"><a style="color: #008000;" href="https://twitter.com/VPestilenZ/status/1140437217619390465" target="_blank" rel="noopener noreferrer">Valentina Pestilene</a></span>ï¼‰çš„æŽ¨ç‰¹ç”¨æˆ·åœ¨è§†é¢‘ä¸­é™„è¨€ã€‚</p>
 </p>
 <blockquote class="twitter-tweet" data-lang="zh-cn">
 <p dir="ltr" lang="en">As someone who makes a lot of Korean food, this is the best method for getting garlic peeled!<br />
-<a href="https://t.co/14GGJDQhRj">pic.twitter.com/14GGJDQhRj</a></p>
-<p>(@VPestilenZ) <a href="https://twitter.com/VPestilenZ/status/1140437217619390465?ref_src=twsrc%5Etfw">2019Äê6ÔÂ17ÈÕ</a></p></blockquote>
+<ahref="https://t.co/14GGJDQhRj"></a><img width="600" src="https://raw.githubusercontent.com/dsc2569/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitterè§†é¢‘æˆ–å›¾ç‰‡.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/dsc2569/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a href="14GGJDQhRj</a></p>
+<p>(@VPestilenZ) <ahref="https://twitter.com/VPestilenZ/status/1140437217619390465?ref_src=twsrc%5Etfw">2019å¹´6æœˆ17æ—¥</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
-<p>Õâ¶ÎÊÓÆµÒýÀ´²»ÉÙÍøÓÑµÄ¾ªÌ¾ºÍÓÄÄ¬ÁôÑÔ¡£¡°ÎÒÏÈÇ°ÔõÃ´²»ÖªµÀÄØ£¿×öÁËÕâÃ´¶àÄê²Ë£¬Èç¹ûÔçÖªµÀÒ»¶¨¶à¶àÓÃ´óËâ¡£¡±¡°ÄãÌæÎÒÊ¡ÁËÖ¸¼×ºÍÊ±¼ä£¬Ð»Ð»¡£¡±¡°Äã¼òÖ±¸Ä±äÁËÎÒµÄÈËÉú£¡¡±¡°ÒûÊ³½çÐèÒª¶Ô´Ë×÷³ö½âÊÍ¡£¡±</p>
-<p>Á¬ÒôÀÖÈËÔ¼º²¡¤´«Ææ£¨John Legend£©µÄÌ«Ì«¡¢ÃûÄ£¿ËÀòË¿Í¡¡¤Ì©¸ù£¨Christine?Teigen£©Ò²×ª·¢ÊÓÆµ¡¢´óºô¾ªÆæ¡£</p>
-</p>
-<blockquote class="twitter-tweet" data-lang="zh-cn">
-<p dir="ltr" lang="en">WHAAAAAAAAAAAAAAAT <a href="https://t.co/tLEl5BtQr3">https://t.co/tLEl5BtQr3</a></p>
-<p>¡ª christine teigen (@chrissyteigen) <a href="https://twitter.com/chrissyteigen/status/1140617013020246018?ref_src=twsrc%5Etfw">2019Äê6ÔÂ17ÈÕ</a></p></blockquote>
-<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
-<p>ºÜ¶àÍøÓÑÁ¢¼´¶¯ÊÖÊµÑé£¬ÆÕ±éµÄ·´À¡ÊÇ£ºÕâÈ·ÊµÊÇºÃ°ì·¨¡£µ±È»£¬ÒªÏëÈçÊÓÆµÖÐÄÇÑùæµÊì£¬¿ÉÄÜ»¹Ðè¶àÁ·Ï°¡£</p>
-<p>¸üÓÐÍøÓÑÐ¦Ëµ£¬Ô¤¼Æ´óËâ£¨¼ÓÉÏ¿ÚÏãÌÇºÍÏãË®£©ÏúÊÛÁ¿½«ÔÚÎ´À´¼¸ÖÜÄÚì­Éý¡£</p>
-<p>ÔðÈÎ±à¼­£ºËÕÃ÷Õæ</p>
+<p>è¿™æ®µè§†é¢‘å¼•æ¥ä¸å°‘ç½‘å‹çš„æƒŠå¹å’Œå¹½é»˜ç•™è¨€ã€‚â€œæˆ‘å…ˆå‰æ€Žä¹ˆä¸çŸ¥é“å‘¢ï¼Ÿåšäº†è¿™ä¹ˆå¤šå¹´èœï¼Œå¦‚æžœæ—©çŸ¥é“ä¸€å®šå¤šå¤šç”¨å¤§è’œã€‚â€â€œä½ æ›¿æˆ‘çœäº†æŒ‡ç”²å’Œæ—¶é—´ï¼Œè°¢è°¢ã€‚â€â€œä½ ç®€ç›´æ”¹å˜äº†æˆ‘çš„äººç”Ÿï¼â€â€œé¥®é£Ÿç•Œéœ€è¦å¯¹æ­¤ä½œå‡ºè§£é‡Šã€‚â€</p>
+<p>è¿žéŸ³ä¹äººçº¦ç¿°Â·ä¼ å¥‡ï¼ˆJohn Legendï¼‰çš„å¤ªå¤ªã€åæ¨¡å…‹èŽ‰ä¸æ±€Â·æ³°æ ¹ï¼ˆChristine?Teigenï¼‰ä¹Ÿè½¬å‘è§†é¢‘ã€å¤§å‘¼æƒŠå¥‡ã€‚</p>
+<figure id="attachment_11340507" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/06/teigen.jpg"><img class="wp-image-11340507 size-large" src="https://i.epochtimes.com/assets/uploads/2019/06/teigen-600x303.jpg" alt="åæ¨¡å…‹èŽ‰ä¸æ±€Â·æ³°æ ¹è½¬å‘è§†é¢‘ã€å¤§å‘¼æƒŠå¥‡ã€‚ï¼ˆæŽ¨ç‰¹ç½‘é¡µæˆªå›¾ï¼‰" width="600" b="303" /></a><figcaption class="wp-caption-text">åæ¨¡å…‹èŽ‰ä¸æ±€Â·æ³°æ ¹è½¬å‘è§†é¢‘ã€å¤§å‘¼æƒŠå¥‡ã€‚ï¼ˆæŽ¨ç‰¹ç½‘é¡µæˆªå›¾ï¼‰</figcaption></figure>
+<p>å¾ˆå¤šç½‘å‹ç«‹å³åŠ¨æ‰‹å®žéªŒï¼Œæ™®éçš„åé¦ˆæ˜¯ï¼šè¿™ç¡®å®žæ˜¯å¥½åŠžæ³•ã€‚å½“ç„¶ï¼Œè¦æƒ³å¦‚è§†é¢‘ä¸­é‚£æ ·å¨´ç†Ÿï¼Œå¯èƒ½è¿˜éœ€å¤šç»ƒä¹ ã€‚</p>
+<p>æ›´æœ‰ç½‘å‹ç¬‘è¯´ï¼Œé¢„è®¡å¤§è’œï¼ˆåŠ ä¸Šå£é¦™ç³–å’Œé¦™æ°´ï¼‰é”€å”®é‡å°†åœ¨æœªæ¥å‡ å‘¨å†…é£™å‡ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šè‹æ˜ŽçœŸ</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/6/20/n11336464.htm">Ò»µ¶¿ì°þ´óËâÃØóÅ·è´« ÍøÌ¾ÒÔÇ°ÀË·ÑÈËÉú</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11272890.htm">Ö»ÓÃÑÎµ÷Î¶ 4ÖÖ·½·¨Òý³öÊß²ËµÄÏÊÎ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/24/n11210075.htm">´ÐËâ·À´ó³¦°© ½µÈ«Éí8ÖÖ°©·çÏÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11271884.htm">´óËâÒ²³Ô²»Æð ´óÂ½ÐÂËâ¼Û¸ñ±ÈÍ¬ÆÚ¸ßÈýËÄ±¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/10/n11248811.htm">Ó¢¹úÆæÒì²ÍÌü£¨ËÄ£©Archipelago¡ª¹Å¹ÖµÄÊ³Îï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/7/n11240408.htm">½µÑªÌÇÆäÊµ²»ÄÑ ÖÐÒ½Ê¦½ÌÄã½µÌÇÊ³ÁÆ·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/5/n11164899.htm">¡¾ÁãË®¹øÊ³Æ×¡¿Òâ´óÀû·çÎ¶ìÀº£ÏÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/26/n11072764.htm">Êß¹ûÊÇÖ²»¯ËØ±¦¿â ¿¹°©·À·¢Ñ× Õ¥Ö­ºÈÒ²ÓÐÐ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/21/n11061372.htm">Äã¸Ã³Ôº®ÐÔÊ³Îï»¹ÊÇÈÈÐÔÊ³Îï£¿Ò»Æª¿´¶®Ê³Îïº®ÈÈÊôÐÔ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11334267.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºÏ°ÔÚ³¯Ã½·¢ÎÄÍ¸Â¶µÄ¹Ø¼üµã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11333944.htm">½ÒÃØÏã¸Û¡°ËÍÖÐ¡±Í»±äÄÚÄ»¼°±³ºóºÚÊÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11333452.htm">ÍâÃ½£ºÖÐ¹úÈËÊÇ·ñÏëÒª×ÔÓÉ ¿´¿´Ïã¸Û±ãÖª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11334864.htm">ÊÜ»ß1446Íò ÖÐ¹²Ç°¹«°²¸±²¿³¤ÃÏºêÎ°ÊÜÉó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324521.htm">ÎïÀíÑ§¼ÒÃÇÎªºÎÌá³ö¶àÖØÓîÖæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/12/10/n4592525.htm">ÏÍÄÜÓë»úÖÇ¼æ±¸©¤©¤êÌ×ÓµÄ¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/8/n11309277.htm">¡¾ÐþÞÊÈ¡¾­¡¿Ö®Èý£ºÀú¾¡ÏÕ×è ÖÕµÖÓ¡¶È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11334517.htm">¼ªËûÊÖ¡°Ö¸µ¯Éñ¹¦¡± Õðº³¡¶ÃÀ¹ú´ïÈËÐã¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11334824.htm">³µÆÀ£º¾­¼Ã·¿³µÖ®Ñ¡ 2019 Kia Forte EX Limited</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11335920.htm">ÉíÌåÓÐ×ÔÓúÁ¦£¡ÄãµÄÉíÌåÃ¿Ìì¶¼ÔÚ×ÔÎÒÇåÀí</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11332792.htm">¡¾ÁãË®¹øÊ³Æ×¡¿ÏÌË®¼¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/6/n11305388.htm">ÕâÖÖÌåÖÊµÄÈËÒ×±»ÎÃ×Ó¶£ ÖÐÒ½Ê¦2ÕÐ·ÀÎÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336260.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°½üÆ½5¼û½ðÕý¶÷ ¸÷ÓÐºÎÅÌËã£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11333511.htm">¡¾ÐÂÎÅ¿´µã¡¿´¨Ï°Í¨»°ËµÉ¶ G20Ì¸ÅÐÇ°¾°ÄÑÁÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11330846.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£ºóÍË±±¾©´ì°Ü ·´ËÍÖÐ¸Õ¿ªÊ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11331929.htm">´¨ÆÕ£ºÖÜÈýÃÀÖÐÖØÆôÌ¸ÅÐ ÖÐ·½Ïë´ïÐ­Òé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331593.htm">ÖÐ¹úÆ÷¹ÙÒÆÖ²Ò½ÔºµØÍ¼½ÒÃØ¡°»îÈËÅ©³¡¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11331795.htm">¡¾·­Ç½±Ø¿´¡¿¸ÛÈË·ßÅ­´ó±¬·¢ Ï°ÎªºÎÓÖÎóÅÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11334062.htm">Î¢²©ÁôÑÔÔâ´óÂ½ÎåÃ«Î§¹¥ Àî¼ÑÐ¾£ºÎÒÎÊÐÄÎÞÀ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331531.htm">Èý¸ö¶ù×Ó¶¼´ÓË¹Ì¹¸£±ÏÒµ ³ÂÃÀÁä¸Ð¶÷ÓÖ½¾°Á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11329594.htm">ÕâÖ»Ð¡¹·Ò»¿´µ½Ñ¼×Ó¾Í»èµ¹ ËÄ½Å³¯Ìì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11333390.htm">·¢Ìû³Æ¾¯·½´Ö±©°²¼ì ´óÂ½¸èÊÖÔøéó¿É»òÔâ·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331047.htm">É¹ÍêÕÕÆ¬ÓöµØÕð Angelababy´Ó20¶à²ãÂ¥ÅÜÏÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324521.htm">ÎïÀíÑ§¼ÒÃÇÎªºÎÌá³ö¶àÖØÓîÖæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/12/10/n4592525.htm">ÏÍÄÜÓë»úÖÇ¼æ±¸©¤©¤êÌ×ÓµÄ¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/8/n11309277.htm">¡¾ÐþÞÊÈ¡¾­¡¿Ö®Èý£ºÀú¾¡ÏÕ×è ÖÕµÖÓ¡¶È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/17/n11328498.htm">Á½Ó×Í¯ÒäÇ°ÊÀ³ö¼Ò ÉúÆ½ÐÐÒÇºÍÒÑ¹ÊÉ®ÈË¶ÔÓ¦</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/2/21/n11061372.md#1">ä½ è¯¥åƒå¯’æ€§é£Ÿç‰©è¿˜æ˜¯çƒ­æ€§é£Ÿç‰©ï¼Ÿä¸€ç¯‡çœ‹æ‡‚é£Ÿç‰©å¯’çƒ­å±žæ€§</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/2/26/n11072764.md#1">è”¬æžœæ˜¯æ¤åŒ–ç´ å®åº“ æŠ—ç™Œé˜²å‘ç‚Ž æ¦¨æ±å–ä¹Ÿæœ‰æ•ˆ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/4/5/n11164899.md#1">ã€é›¶æ°´é”…é£Ÿè°±ã€‘æ„å¤§åˆ©é£Žå‘³ç‚–æµ·é²œ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/4/24/n11210075.md#1">è‘±è’œé˜²å¤§è‚ ç™Œ é™å…¨èº«8ç§ç™Œé£Žé™©</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/dfh2/djy/blob/master/gb/19/6/20/n11336464.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/dfh2/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/dfh2/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">è”¡éœžï¼šæ–‡é©æ˜¯ä¸€åœºæ¯ä¸ªäººå‘½è¿çš„æµ©åŠ«</a></li><li><a href="https://github.com/dsc2569/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839741.md#1" target="_blank">ã€ç»†è¯­äººç”Ÿã€‘è§è¯å¤§æ³•çš„ç¥žå¥‡ï¼ˆ8ï¼‰</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110809.md#1">ã€åå­—è·¯å£ã€‘ç¾Žä¸­è¦å…¨é¢è„±é’© ä¸­å›½äº”å¤§ç»æµŽè­¦è®¯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12112087.md#1">è‡´æ•¬æŽæ´ªå¿—å…ˆç”Ÿ ç¾Žè®®å‘˜æŽˆäºˆ513å›½ä¼šå±±å›½æ——</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113099.md#1">å·æ™®ç§°å¯åˆ‡æ–­â€œç¾Žä¸­å…³ç³»â€ èµµç«‹åšè½¯åŒ–å›žåº”</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12112161.md#1">å››å·å…¬æ°‘è½¬ä¼ ä¸€å¼ å›¾ç‰‡ å¼•æ¥å›½ä¿äºŒæ¬¡ä¸Šé—¨</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/2/22/n11886913.md#1">ã€æ€æƒ³é¢†è¢–ã€‘ä¸­å…±ä¸ºä½•å¿µå¿µä¸å¿˜å¾æœå°æ¹¾ï¼Ÿ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110814.md#1">IUåŠä¸ªæœˆä¸‰åº¦ææ¬¾åŠ©äºº ç”Ÿæ—¥å‰å¤•çŸ­å‘å—å…³æ³¨</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12115144.md#1">å¯¹å°æ¹¾èµžä¸ç»å£ é»„ç§‹ç”Ÿï¼šæˆ‘çš„å…„å¼Ÿä¹Ÿè¦ç§»æ°‘äº†</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114166.md#1">å´”æ™ºå‹æœ¬æ—¥è¿Žæ¥å¥³å„¿å‡ºç”Ÿ æ¯å¥³å‡å®‰</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113316.md#1">åŠç™¾å¹´çºªåå¤©ç»ƒå‡ºè…¹è‚Œ æŽè‹¥å½¤åˆ†äº«å†»é¾„æœ¯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114576.md#1">ä¸»æŒé‡é™©æƒŠé­‚ å¼ å‡¤ä¹¦é•¿è¾¾10å¹´æ²¡æŽ¥å¤–æ™¯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/13/7/18/n3919814.md#1">ç±³å¼€æœ—åŸºç½—ï¼ˆ8ï¼‰ã€Šåˆ›ä¸–çºªã€‹ï¼ˆä¸‹ï¼‰</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110895.md#1">å¥³å­æ¿’æ­»è§ä¸Šå¸å’Œè€¶ç¨£ æ³æ±‚è¿˜é˜³ç»ˆèŽ·é‡ç”Ÿ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/25/n12061244.md#1">è´¾å®çŽ‰å’Œè–›å®é’—çš„é‡‘çŽ‰ä¹‹ç¼˜</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/13/n12026603.md#1">ã€å‘½ç†ã€‘çš‡å¸å‘½æ˜¯æ€Žæ ·æ¥çš„ï¼Ÿ</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/12/n12103093.md#1">æ²‰æººäºŽé…’ä¹¡å¿˜å´å¤©å‘½ é©¬å‘¨å—ç‚¹åŒ–ç»ˆæˆè‚¡è‚±ä¹‹è‡£</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/dsc2569/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/dsc2569/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/6/20/n11336464.htm">ä¸€åˆ€å¿«å‰¥å¤§è’œç§˜ç¬ˆç–¯ä¼  ç½‘å¹ä»¥å‰æµªè´¹äººç”Ÿ</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dsc2569/djy/blob/master/gb/19/6/20/n11336464.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/dsc2569/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
